Modificacoes na pagina de login Consertei a pagina de endereco/contato(tava sem o style) Exclui arquivos desnecessarios das imagens

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <footer class="rodape">
                 <img src="imagens/logo-semfundo.png">
                 <section id="redes">
+                    <h2>Siga-nos em nossas redes sociais</h2>
                 </section>  
                 <div class="links">
                     <a href="https://www.facebook.com">
