--- a/rastreamento.html
+++ b/rastreamento.html
@@ -78,10 +78,25 @@
 
             <footer class="rodape">
                 <img src="imagens/logo-semfundo.png">
+                <section id="redes">
+                    <h2>Siga-nos em nossas redes sociais</h2>
+                </section>  
+                <div class="links">
+                    <a href="https://www.facebook.com">
+                        <i class="fa-brands fa-square-facebook" style="color: #ffc846;"></i>
+                    </a>
+                    <a href="https://www.linkedin.com">
+                        <i class="fa-brands fa-linkedin" style="color: #ffc846;"></i>
+                    </a>
+                    <a href="https://www.instagram.com">
+                        <i class="fa-brands fa-instagram" style="color: #ffc846;"></i>
+                    </a>
 
+                </div>
                 <hr>
-
                 <h5>&copy;Todos os direitos reservados</h5>
             </footer>
         </body>
+        <script src="https://kit.fontawesome.com/04ab88e5e7.js" crossorigin="anonymous"></script>
+
     </html>
